Crash when exporting PLY file with custom attributes #114346

Closed
opened 2023-10-31 23:00:54 +01:00 by Jonathan-Brodsky · 5 comments

System Information
Operating system: Windows 10 Enterprise
Graphics card: Geforce RTX 2070

Blender Version
Broken: Blender 4.1.0, Commit date: 2023-10-31 14:46, Hash 0d861a93a6
Worked: 4.1.0 alpha main f03a015049 (didn't do an exhaustive search, just downloaded an earlier daily)

Short description of error
Exporting a PLY file with a high count of vertexes, and a high count of custom attributes seems to be causing a crash.

Exact steps for others to reproduce the error

  • Open the Attached blend file (a minor edit to one of the geoscatter example file linked under instancing by scale on this page)
  • Select the object "scatter_obj : VariablePines"
  • Go to File > Export and click on Stanford PLY (.ply)
  • Before export configure these properties:
    • ASCII,
    • Selected Only
    • Vertex Attributes
  • Export

causes the attached crash.

**System Information** Operating system: Windows 10 Enterprise Graphics card: Geforce RTX 2070 **Blender Version** Broken: Blender 4.1.0, Commit date: 2023-10-31 14:46, Hash 0d861a93a662 Worked: 4.1.0 alpha main f03a01504939 (didn't do an exhaustive search, just downloaded an earlier daily) **Short description of error** Exporting a PLY file with a high count of vertexes, and a high count of custom attributes seems to be causing a crash. **Exact steps for others to reproduce the error** - Open the Attached blend file (a minor edit to one of the geoscatter example file [linked under instancing by scale on this page](https://www.geoscatter.com/documentation.html#Examples)) - Select the object "scatter_obj : VariablePines" - Go to `File` > `Export` and click on `Stanford PLY (.ply)` - Before export configure these properties: - [X] ASCII, - [ ] Selected Only - [X] Vertex Attributes - Export causes the attached crash.
Jonathan-Brodsky added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-10-31 23:00:54 +01:00

I believe it may be related to the PR here #114320 .

I believe it may be related to the PR here https://projects.blender.org/blender/blender/pulls/114320 .
Member

No crash here

**System Information**
Operating system: Linux-6.5.5-200.fc38.x86_64-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01
version: 4.1.0 Alpha, branch: main, commit date: 2023-10-31 18:59, hash: `fdd11aba68f7`
No crash here ``` **System Information** Operating system: Linux-6.5.5-200.fc38.x86_64-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 version: 4.1.0 Alpha, branch: main, commit date: 2023-10-31 18:59, hash: `fdd11aba68f7` ```

I can reproduce. Looks like there's fewer attribute entries than vertices:

The PLY exporter is tracking 764722 verts but only 1603 attribs so it steps off the array -- 1603 is how many points the scatter_obj has on it after Geometry Nodes is activated. I'm not sure where it's getting the remaining verts but it's probably related to the instancing somehow.

BLI_assert failed: C:\Users\jesse\source\blender-git\blender\source\blender\blenlib\BLI_array.hh:203, operator [](), at 'index < size_'

_BLI_assert_abort() Line 49	C
blender::Array<float,4,blender::GuardedAllocator>::operator[](__int64 index) Line 203	C++
blender::io::ply::write_vertices(blender::io::ply::FileBuffer & buffer, const blender::io::ply::PlyData & ply_data) Line 38	C++
blender::io::ply::exporter_main(bContext * C, const PLYExportParams & export_params) Line 46	C++
PLY_export(bContext * C, const PLYExportParams * export_params) Line 30	C++

CC @aras_p

I can reproduce. Looks like there's fewer attribute entries than vertices: The PLY exporter is tracking 764722 verts but only 1603 attribs so it steps off the array -- 1603 is how many points the `scatter_obj` has on it after Geometry Nodes is activated. I'm not sure where it's getting the remaining verts but it's probably related to the instancing somehow. ``` BLI_assert failed: C:\Users\jesse\source\blender-git\blender\source\blender\blenlib\BLI_array.hh:203, operator [](), at 'index < size_' _BLI_assert_abort() Line 49 C blender::Array<float,4,blender::GuardedAllocator>::operator[](__int64 index) Line 203 C++ blender::io::ply::write_vertices(blender::io::ply::FileBuffer & buffer, const blender::io::ply::PlyData & ply_data) Line 38 C++ blender::io::ply::exporter_main(bContext * C, const PLYExportParams & export_params) Line 46 C++ PLY_export(bContext * C, const PLYExportParams * export_params) Line 30 C++ ``` CC @aras_p
Jesse Yurkovich added
Module
Pipeline, Assets & IO
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-01 20:09:49 +01:00

I can confirm the crash!

**System Information**
Operating system: Windows-10-10.0.23575-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.6.0 Core Profile Context 23.20.01.04.230725
version: 4.1.0 Alpha,
I can confirm the crash! ``` **System Information** Operating system: Windows-10-10.0.23575-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.6.0 Core Profile Context 23.20.01.04.230725 version: 4.1.0 Alpha, ```

I've attached a much simplified file to this comment which will crash at the same place in Debug or ASAN builds.

I've attached a much simplified file to this comment which will crash at the same place in Debug or ASAN builds.
Aras Pranckevicius self-assigned this 2023-11-01 20:42:31 +01:00
Aras Pranckevicius changed title from Crash when exporting PLY file to Crash when exporting PLY file with custom attributes 2023-11-01 20:42:49 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-02 21:58:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114346
No description provided.